# Backend/app/Core/Models/DTO/AssetDto.cs
@@ -1,0 +1,7 @@
+namespace Backend.app.Core.Models.DTO;
+
+public record CreateAssetTypeDto(string Description);
+
+public record UpdateAssetTypeDto(string Description);
+
+public record AssetTypeResponseDto(long Id, string Description);
